Added all features

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,6 +28,7 @@
         android:hint="@string/ui_login_email_hint"
         android:inputType="textEmailAddress"
         android:minHeight="@dimen/minEditTextHeight"
+        android:text="eve.holt@reqres.in"
         app:layout_constraintBottom_toTopOf="@+id/etPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -44,6 +45,7 @@
         android:hint="@string/ui_login_password_hint"
         android:inputType="textPassword"
         android:minHeight="@dimen/minEditTextHeight"
+        android:text="cityslicka"
         app:layout_constraintBottom_toTopOf="@+id/btnLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
